2009-12-21 Pierre Wieser <pwieser@trychlos.org>

	Fix the display of item's icon.

	* nautilus-actions/nact/transparent.png: New file.

	* nautilus-actions/nact/Makefile.am: Updated accordingly.

	* nautilus-actions/nact/nact-iaction-tab.c
	(display_icon): Removed function.
	(nact_iaction_tab_initial_load_toplevel):
	Set the frame the same height that the row.
	(on_icon_changed):
	Displays a transparent image instead of hiding the widget.

	* nautilus-actions/nact/nact-iactions-list.c
	(nact_iactions_list_all_widgets_showed):
	Only select the first item when all widgets have been showed.

	* nautilus-actions/nact/nact-main-window.c
	(on_base_all_widgets_showed): Initialize the tree after the tabs.

	* nautilus-actions/private/na-object-item.c
	(na_object_item_get_pixbuf): Use GThemedIcon.

	* nautilus-actions/nact/nact-main-window.c
	(on_iactions_list_selection_changed): Remove useless properties setup.
	Provider writability status is also displayed for profiles.

	* nautilus-actions/nact/nact-iaction-tab.c
	(on_tab_updatable_provider_changed, display_provider_name):
	New functions.

	* nautilus-actions/nact/nact-main-menubar.c (save_item):
	Notice provider change at save time.

	* nautilus-actions/nact/nact-main-tab.h:
	* nautilus-actions/nact/nact-main-window.c:
	Define new TAB_UPDATABLE_SIGNAL_PROVIDER_CHANGED signal.

	* nautilus-actions/nact/nact-main-menubar.c (on_update_sensitivities):
	Add - commented for now - debug message.

	* nautilus-actions/nact/nact-window.c
	(nact_window_has_writable_providers): Only unref the object if not null.

	* nautilus-actions/runtime/na-io-provider.c
	(na_io_provider_get_writable_provider): Fix writability check.

2009-12-20 Pierre Wieser <pwieser@trychlos.org>

	Some cosmetic changes.

	* nautilus-actions/nact/nact-iactions-list.c (nact_iactions_list_fill):
	Report selection of first row at the very end of the function.

	* nautilus-actions/nact/nact-main-menubar.c