@@ -113,5 +113,3 @@
   and height is not ok
 
 - desktop file is not deleted when the item is
-
-- crash on F5
